--- a/CommandLoop/CommandLoop.csproj
+++ b/CommandLoop/CommandLoop.csproj
@@ -34,5 +34,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Include="CommandLoop.cs" />
+    <Compile Include="InputWrapper.cs" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
